--- a/Asp.NETMVCCRUD/Asp.NETMVCCRUD.csproj
+++ b/Asp.NETMVCCRUD/Asp.NETMVCCRUD.csproj
@@ -136,22 +136,6 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.css" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.min.css" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\img\bootstrap-colorpicker\alpha-horizontal.png" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\img\bootstrap-colorpicker\alpha.png" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\img\bootstrap-colorpicker\hue-horizontal.png" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\img\bootstrap-colorpicker\hue.png" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\img\bootstrap-colorpicker\saturation.png" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\js\bootstrap-colorpicker.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\js\bootstrap-colorpicker.min.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\assets\main.css" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\helpers\code\index.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\serve.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\src\js\colorpicker-color.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\src\js\colorpicker-component.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\src\js\colorpicker-defaults.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\src\js\colorpicker-plugin-wrapper.js" />
     <Content Include="Content\bower_components\bootstrap-datepicker\.gitignore" />
     <Content Include="Content\bower_components\bootstrap-datepicker\dist\css\bootstrap-datepicker.css" />
     <Content Include="Content\bower_components\bootstrap-datepicker\dist\css\bootstrap-datepicker.min.css" />
@@ -4083,6 +4067,7 @@
     <Content Include="Content\dist\css\alt\AdminLTE-select2.min.css" />
     <Content Include="Content\dist\css\alt\AdminLTE-without-plugins.css" />
     <Content Include="Content\dist\css\alt\AdminLTE-without-plugins.min.css" />
+    <Content Include="Content\dist\css\ionicons.min.css" />
     <Content Include="Content\dist\css\select2.min.css" />
     <Content Include="Content\dist\css\skins\skin-black-light.css" />
     <Content Include="Content\dist\css\skins\skin-black-light.min.css" />
@@ -4380,32 +4365,6 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\.bower.json" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\bower.json" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\CONTRIBUTING.md" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.css.map" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.min.css.map" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\api.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\example.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\01_basic.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\02_component.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\03_component_options.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\04_events.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\05_transparent.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\06_horizontal.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\07_inline.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\08_palette.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\09_size.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\10_disabled.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\examples\11_modal.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\includes\social.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\layout.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\docs\pages\index.hbs" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\LICENSE" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\README.md" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\src\less\colorpicker.less" />
-    <Content Include="Content\bower_components\bootstrap-colorpicker\src\sass\_colorpicker.scss" />
     <Content Include="Content\bower_components\bootstrap-datepicker\.bower.json" />
     <Content Include="Content\bower_components\bootstrap-datepicker\.editorconfig" />
     <Content Include="Content\bower_components\bootstrap-datepicker\.github\ISSUE_TEMPLATE.md" />
