--- a/Asp.NETMVCCRUD/bin/Asp.NETMVCCRUD.dll.config
+++ b/Asp.NETMVCCRUD/bin/Asp.NETMVCCRUD.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="inspecciones" value="c:\SistemaPosgrado\Alumnos" />
+    <add key="Alumnos" value="c:\SistemaPosgrado\Alumnos" />
     <add key="Pagos" value="c:\SistemaPosgrado\Pagos" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
