--- a/Asp.NETMVCCRUD/Asp.NETMVCCRUD.csproj
+++ b/Asp.NETMVCCRUD/Asp.NETMVCCRUD.csproj
@@ -4779,6 +4779,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\login.js" />
     <Content Include="Scripts\notify.min.js" />
     <Content Include="Scripts\Script.js" />
     <Content Include="Web.config">
