--- a/Asp.NETMVCCRUD/Asp.NETMVCCRUD.csproj
+++ b/Asp.NETMVCCRUD/Asp.NETMVCCRUD.csproj
@@ -3138,6 +3138,7 @@
     <Content Include="Content\bower_components\fastclick\lib\fastclick.js" />
     <Content Include="Content\bower_components\font-awesome\.gitignore" />
     <Content Include="Content\bower_components\font-awesome\css\font-awesome.css" />
+    <Content Include="Content\dist\img\logo_aate.png" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\bower_components\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\bower_components\font-awesome\HELP-US-OUT.txt" />
